@@ -1,3 +1,8 @@
+2015-05-09  Carl Hetherington  <cth@carlh.net>
+
+	* Disable OK until a download succeeds in the certificate
+	downloader (#404).
+
 2015-05-07  Carl Hetherington  <cth@carlh.net>
 
 	* Version 2.0.43 released.
